fix teamCard overflow

--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,7 @@ li, a {
   display: flex;
   flex-direction: column;
   gap: var(--padding-md);
+  box-sizing: border-box;
 }
 
 .text-wrapper {
